# cpp-verbio-speech-center

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: ci.yml  release.yml
cmake/: ProtoTools.cmake
headers/: Audio.h  Configuration.h  Grammar.h  RecognitionClient.h  SpeechCenterClient.h  SpeechCenterCredentials.h  gRpcExceptions.h  latencyStatistics.h  logger.h
proto/: CMakeLists.txt  recognition.proto  recognition_streaming_request.proto  recognition_streaming_response.proto
src/: Audio.cpp  CMakeLists.txt  Configuration.cpp  Configuration.h  Grammar.cpp  RecognitionClient.cpp  SpeechCenterClient.cpp  SpeechCenterClient.h  SpeechCenterCredentials.cpp  gRpcExceptions.cpp  gRpcExceptions.h  latencyStatistics.cpp  main.cpp
test/: CMakeLists.txt  test_audio.cpp  test_commandLine.cpp  test_credentials.cpp  test_latencyStats.cpp
